fix import file use case
